--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@
     @apply bg-mont-cream text-mont-espresso;
     overflow-x: hidden;
     width: 100%;
+    height: 100%;
   }
 
   /* Smooth scroll */
@@ -36,6 +37,7 @@
     /* Firefox */
     -ms-overflow-style: none;
     /* IE/Edge */
+    height: 100%;
   }
 
   html::-webkit-scrollbar {
